Fix: font-related layout issue below 304px

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -573,7 +573,11 @@ footer {
         margin-top: 10rem;
     }
 
-    *, ::after, ::before {
-        box-sizing: content-box;
+    h1 {
+        font-size: xx-large;
     }
+
+    /* *, ::after, ::before {
+        box-sizing: content-box;
+    } */
 }
